# align-data

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  trigger-deploy.yml
align_data/: __init__.py
align_data/configs/hydra_overrides/: phase2_comparative_regression.yaml
align_data/data/evaluation-outputs/rq2_eval_live/baseline/2025-08-08__10-05-27/: July2025-AF-eval.ADEPT-June2025-affiliation-0.0.final_state_unstructured.json  July2025-AF-eval.ADEPT-June2025-affiliation-0.1.final_state_unstructured.json  July2025-AF-eval.ADEPT-June2025-affiliation-0.2.final_state_unstructured.json  July2025-AF-eval.ADEPT-June2025-affiliation-0.3.final_state_unstructured.json  July2025-AF-eval.ADEPT-June2025-affiliation-0.4.final_state_unstructured.json  July2025-AF-eval.ADEPT-June2025-affiliation-0.5.final_state_unstructured.json  July2025-AF-eval.ADEPT-June2025-affiliation-0.6.final_state_unstructured.json  July2025-AF-eval.ADEPT-June2025-affiliation-0.7.final_state_unstructured.json  July2025-AF-eval.ADEPT-June2025-affiliation-0.8.final_state_unstructured.json  July2025-AF-eval.ADEPT-June2025-affiliation-0.9.final_state_unstructured.json  July2025-AF-eval.ADEPT-June2025-affiliation-1.0.final_state_unstructured.json  (+34 more)
configs/hydra_overrides/: phase2_comparative_regression.yaml  phase2_comparative_regression_july.yaml  phase2_comparative_regression_june.yaml
data/phase2_icl/: AF-train.json  MF-train.json  MU-train.json  PS-train.json  SS-train.json
scripts/: download_latest.sh
(+67 files in other folders)
