[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "align-data"
version = "0.1.0"
description = "Version-controlled ICL examples for align-system ADMs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "PaulHax"},
]

[tool.setuptools.packages.find]
include = ["align_data*"]

[tool.setuptools.package-data]
align_data = [
    "data/**/*.json",
    "configs/**/*.yaml",
]